--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,9 @@ langchain-groq>=0.2.0
 
 chromadb>=0.5.0
 pypdf>=4.3.0
+python-docx>=1.1.0
+python-multipart>=0.0.12
 
 pydantic>=2.8.0
 python-dotenv~=1.0.1
-
+supabase>=2.7.4
