--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-markdown": "^9.1.0"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.19",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.27",
         "postcss": "^8.5.6",
